# upwork-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/upwork_mcp/: __init__.py  __main__.py  client.py  server.py
