[project]
name = "upwork-mcp"
version = "0.1.0"
description = "Upwork MCP server — manage jobs, profile, and proposals via session cookies"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "curl-cffi>=0.15.0",
    "python-dotenv>=1.0.0",
    "websockets>=16.0",
]

[project.scripts]
upwork-mcp = "upwork_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/upwork_mcp"]

[tool.uv]
dev-dependencies = []
